Wip e2e maestro tests
